Added encryption configuration class for using BCryptPasswordEncoder. Removed duplicate encoder definitions from SecurityConfig and updated services to use the new PasswordEncoder. Optimized tests using new constants to improve readability and maintainability. Fixed errors in tests, added new checks.